--- a/main.html
+++ b/main.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>OTP Verification</title>
+<link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+  <div class="container">
+    <h1 id="verification_heading">OTP Verification</h1>
+    <p id="verification_subtext">Please enter the OTP sent to your mobile number.</p>
+    <div class="code-container">
+      <input type="text" class="code" maxlength="1" autofocus>
+      <input type="text" class="code" maxlength="1">
+      <input type="text" class="code" maxlength="1">
+      <input type="text" class="code" maxlength="1">
+      <input type="text" class="code" maxlength="1">
+      <input type="text" class="code" maxlength="1">
+    </div>
+  </div>
 
+  <script src="script.js"></script> <!-- Link to your JavaScript file -->
 </body>
-
 </html>
+
