--- a/main.html
+++ b/main.html
@@ -1,26 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>OTP Verification</title>
-<link rel="stylesheet" href="styles.css"> <!-- Link to your CSS file -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>OTP Verification</title>
+    <style>
+        /* Basic styling for centering and spacing */
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+        .code-container {
+            display: flex;
+            justify-content: center;
+            margin-top: 20px;
+        }
+        .code {
+            width: 40px;
+            height: 40px;
+            font-size: 24px;
+            text-align: center;
+            margin: 0 5px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            outline: none;
+        }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <h1 id="verification_heading">OTP Verification</h1>
-    <p id="verification_subtext">Please enter the OTP sent to your mobile number.</p>
-    <div class="code-container">
-      <input type="text" class="code" maxlength="1" autofocus>
-      <input type="text" class="code" maxlength="1">
-      <input type="text" class="code" maxlength="1">
-      <input type="text" class="code" maxlength="1">
-      <input type="text" class="code" maxlength="1">
-      <input type="text" class="code" maxlength="1">
+    <div id="verification_heading">
+        <h1>OTP Verification</h1>
     </div>
-  </div>
+    <div id="verification_subtext">
+        <p>Please enter the 6-digit OTP sent to your mobile number</p>
+    </div>
+    <div class="code-container">
+        <input type="text" maxlength="1" class="code" autofocus>
+        <input type="text" maxlength="1" class="code">
+        <input type="text" maxlength="1" class="code">
+        <input type="text" maxlength="1" class="code">
+        <input type="text" maxlength="1" class="code">
+        <input type="text" maxlength="1" class="code">
+    </div>
 
-  <script src="script.js"></script> <!-- Link to your JavaScript file -->
+    <script>
+        const inputs = document.querySelectorAll('.code');
+
+        inputs.forEach((input, index) => {
+            input.addEventListener('input', (e) => {
+                const nextInput = inputs[index + 1];
+                if (nextInput && input.value) {
+                    nextInput.focus();
+                }
+            });
+
+            input.addEventListener('keydown', (e) => {
+                if (e.key === 'Backspace' && !input.value && index > 0) {
+                    const previousInput = inputs[index - 1];
+                    previousInput.focus();
+                }
+            });
+        });
+    </script>
 </body>
 </html>
-
