--- a/main.html
+++ b/main.html
@@ -4,67 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OTP Verification</title>
-    <style>
-        /* Basic styling for centering and spacing */
-        body {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            margin: 0;
-            font-family: Arial, sans-serif;
-        }
-        .code-container {
-            display: flex;
-            justify-content: center;
-            margin-top: 20px;
-        }
-        .code {
-            width: 40px;
-            height: 40px;
-            font-size: 24px;
-            text-align: center;
-            margin: 0 5px;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            outline: none;
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="verification_heading">
-        <h1>OTP Verification</h1>
+    <div class="container">
+        <h2 id="verification_heading">Verify Your Account</h2>
+        <p id="verification_subtext">Enter the OTP sent to your email.</p>
+        <div class="code-container">
+            <input type="text" class="code" id="code-1" maxlength="1" />
+            <input type="text" class="code" id="code-2" maxlength="1" />
+            <input type="text" class="code" id="code-3" maxlength="1" />
+            <input type="text" class="code" id="code-4" maxlength="1" />
+            <input type="text" class="code" id="code-5" maxlength="1" />
+            <input type="text" class="code" id="code-6" maxlength="1" />
+        </div>
     </div>
-    <div id="verification_subtext">
-        <p>Please enter the 6-digit OTP sent to your mobile number</p>
-    </div>
-    <div class="code-container">
-        <input type="text" maxlength="1" class="code" autofocus>
-        <input type="text" maxlength="1" class="code">
-        <input type="text" maxlength="1" class="code">
-        <input type="text" maxlength="1" class="code">
-        <input type="text" maxlength="1" class="code">
-        <input type="text" maxlength="1" class="code">
-    </div>
-
-    <script>
-        const inputs = document.querySelectorAll('.code');
-
-        inputs.forEach((input, index) => {
-            input.addEventListener('input', (e) => {
-                const nextInput = inputs[index + 1];
-                if (nextInput && input.value) {
-                    nextInput.focus();
-                }
-            });
-
-            input.addEventListener('keydown', (e) => {
-                if (e.key === 'Backspace' && !input.value && index > 0) {
-                    const previousInput = inputs[index - 1];
-                    previousInput.focus();
-                }
-            });
-        });
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
